--- a/src/app.css
+++ b/src/app.css
@@ -93,5 +93,5 @@
 
 ::selection {
     background-color: #D72655; /* Change this to whatever color you want */
-    color: #ffffff;
+    color: #F2C798;
 }
