--- a/src/app.css
+++ b/src/app.css
@@ -92,6 +92,6 @@
 }
 
 ::selection {
-    background-color: #D72655; /* Change this to whatever color you want */
+    background-color: #E2261D; /* Change this to whatever color you want */
     color: #F2C798;
 }
